# B2B-SAAS-APPP

backend/: .env  pyproject.toml  taskboard.db
backend/app/: main.py
backend/app/api/: tasks.py
backend/app/core/: auth.py  clerk.py  config.py  database.py
backend/app/models/: task.py
backend/app/schemas/: task.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Layout.jsx  TaskCard.jsx
frontend/src/pages/: DashboardPage.jsx  HomePage.jsx  PricingPage.jsx  SignInpage.jsx  SignUpPage.jsx
